<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_MergeInlet" Id="{dbb48e1b-e067-409e-9669-8745d83bebd0}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE ST_MergeInlet :
STRUCT
	{attribute 'OPC.UA.DA' := '0'}
	Cfg		:	ST_MergeInletCfg;
	Ctrl	:	ST_MergeInletCtrl;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>